blue-ingress.yaml
apiVersion:
networking.k8s.io/v1
kind: Ingress
metadata:
 name: app-ingress
 namespace: namespace1
 annotations:
nginx.ingress.kubernetes.io/rewrite-target:
/
spec:
 rules:
 - host:
app.example.com
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: app-service
           port:
             number: 80
